# risk

./: .gitignore  Cargo.toml
benches/: nn_bench.rs
src/: arena.rs  evolver.rs  game.rs  main.rs  player.rs  territories.rs
src/bots/: mod.rs  neural_bot.rs  random_bot.rs  rule_based_bot.rs
src/game_state/: apply_move_result.rs  display.rs  draw_map.rs  game_state.rs  initial_placement.rs  mod.rs  move_results.rs  moves.rs
