[package]
name = "risk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.19.2", features = ["png"] }
image = "0.24.8"
rand = "0.8.5"
strum = "0.26.1"
strum_macros = "0.26.1"
viuer = "0.7.1"
