[package]
name = "risk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.19.2", features = ["png"] }
image = "0.24.8"
itertools = "0.12.1"
num_cpus = "1.16.0"
num_enum = "0.7.2"
once_cell = "1.19.0"
rand = "0.8.5"
strum = "0.26.1"
strum_macros = "0.26.1"
threadpool = "1.8.1"
viuer = "0.7.1"
